@@ -5,4 +5,4 @@
 -------
 
 {{ trans('mail.footer_contact_info') }}
-{{ config('app.url') }}{{ route('people.show', $contact) }}
+{{ route('people.show', $contact) }}
